fix links text wrapping background disappears

--- a/assets/css/extended/shortcodes.css
+++ b/assets/css/extended/shortcodes.css
@@ -117,43 +117,47 @@
 }
 
 a.link-highlight {
-  box-shadow: none;
-  position: relative;
+  --highlight-color-with-transparency: color-mix(in srgb, var(--highlight-color) 40%, transparent);
+  background: linear-gradient(180deg, transparent 60%, var(--highlight-color-with-transparency) 60%);
 }
 
-a.link-highlight::after, a.link-highlight::before {
-  content: "";
-
-  /* Fill link text */
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-  z-index: -1;
+a.link-highlight:hover {
+  background: linear-gradient(180deg, transparent 0%, var(--highlight-color-with-transparency) 0%);;
 }
 
-a.link-highlight::after {
-  opacity: 0.4;
-  background: linear-gradient(180deg, transparent 60%, var(--highlight-color) 60%);
+/* a.link-highlight::after, a.link-highlight::before { */
+/*   content: ""; */
 
-  transition: opacity 0.5s ease-out;
-  -webkit-transition: opacity 0.5s ease-out;
-}
+/*   /* Fill link text */ */
+/*   position: absolute; */
+/*   top: 0; */
+/*   left: 0; */
+/*   width: 100%; */
+/*   height: 100%; */
 
-a.link-highlight::before {
-  opacity: 0.0;
-  background: linear-gradient(180deg, transparent 0%, var(--highlight-color) 0%);
+/*   z-index: -1; */
+/* } */
 
-  transition: opacity 0.5s ease-in;
-  -webkit-transition: opacity 0.5s ease-in-out;
-}
+/* a.link-highlight::after { */
+/*   opacity: 0.4; */
+/*   background: linear-gradient(180deg, transparent 60%, var(--highlight-color) 60%); */
 
-a.link-highlight:hover::after{
-  opacity: 0.0;
-}
+/*   transition: opacity 0.5s ease-out; */
+/*   -webkit-transition: opacity 0.5s ease-out; */
+/* } */
 
-a.link-highlight:hover::before {
-  opacity: 0.5;
-}
+/* a.link-highlight::before { */
+/*   opacity: 0.0; */
+/*   background: linear-gradient(180deg, transparent 0%, var(--highlight-color) 0%); */
+
+/*   transition: opacity 0.5s ease-in; */
+/*   -webkit-transition: opacity 0.5s ease-in-out; */
+/* } */
+
+/* a.link-highlight:hover::after{ */
+/*   opacity: 0.0; */
+/* } */
+
+/* a.link-highlight:hover::before { */
+/*   opacity: 0.5; */
+/* } */
